also add code font

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,15 @@
 	font-style: normal;
 }
 
+@font-face {
+	font-family: "source code pro";
+	src: url("../fonts/SourceCodePro-Regular.otf") format("opentype"),
+		url("../fonts/SourceCodePro-Regular.ttf") format("truetype"),
+		url("../fonts/SourceCodePro-Regular.woff") format("woff");
+	font-weight: normal;
+	font-style: normal;
+}
+
 .navbar-logo {
 	max-width: 50px;
 	max-height: 50px;
