--- a/css/styles.css
+++ b/css/styles.css
@@ -115,3 +115,26 @@ div.quarto-post .listing-categories .listing-category:hover {
 	display: flex;
 	justify-content: center;
 }
+
+.cell-output p img {
+	max-width: 100%;
+	height: auto;
+}
+
+/* prevent latex overflowing lines */
+mjx-container {
+	overflow-x: scroll;
+	overflow-y: hidden;
+}
+
+/* change scrollbars */
+mjx-container::-webkit-scrollbar {
+	height: auto;
+}
+
+mjx-container::-webkit-scrollbar-thumb {
+	background-color: #7373e3;
+	border: 6px solid transparent;
+	background-clip: padding-box;
+	border-radius: 100px;
+}
